--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "expo lint",
     "format": "prettier --write .",
     "test": "vitest run",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "qr": "node scripts/generate_qr.mjs"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "expo-audio": "~1.1.0",
     "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
@@ -69,7 +70,7 @@
     "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
-    "vitest": "^2.1.9"
+    "vitest": "^4.0.16"
   },
   "packageManager": "pnpm@9.12.0"
 }
