Remove backup em nuvem
Remove a funcionalidade de backup no Google Drive,
simplificando a aplicação e removendo a necessidade
de autenticação com o Google.
Adiciona instruções detalhadas no README para configurar
backup do Google Drive
Inclui o arquivo .env no .gitignore.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "expo lint",
     "format": "prettier --write .",
     "test": "vitest run",
-    "android": "expo run:android",
+    "android": "expo run:android --debug",
     "ios": "expo run:ios",
     "qr": "node scripts/generate_qr.mjs"
   },
