--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
-    "build": "echo 'Build script for mobile app - no build needed for Expo'",
+    "dev": "expo start",
     "check": "tsc --noEmit",
     "lint": "expo lint",
     "format": "prettier --write .",
     "test": "vitest run",
-    "android": "expo run:android --debug",
+    "android": "expo run:android",
     "ios": "expo run:ios",
-    "qr": "node scripts/generate_qr.mjs"
+    "web": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
+    "build:dev": "eas build --profile development --platform android",
+    "build:preview": "eas build --profile preview --platform android",
+    "build:prod": "eas build --profile production --platform android",
+    "build:web": "npx expo export --platform web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.1",
-    "@react-navigation/drawer": "^7.7.10",
-    "@react-navigation/native": "^7.1.25",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/drawer": "^7.5.0",
+    "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.6.13",
     "clsx": "^2.1.1",
     "expo": "~54.0.29",
@@ -29,6 +32,7 @@
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-notifications": "~0.32.15",
