Migra para npm para gerenciamento de dependências
Migra o projeto para usar npm em vez de pnpm para
gerenciamento de dependências. Isso simplifica o fluxo de
trabalho e alinha-se melhor com as práticas da equipe.
Remove a configuração específica do pnpm e atualiza o
workflow do GitHub Actions para usar o cache do npm.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,14 +29,11 @@ jobs:
       - name: 🏗 Checkout
         uses: actions/checkout@v4
 
-      - name: 📦 Setup pnpm
-        uses: pnpm/action-setup@v4
-
       - name: 🏗 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "pnpm"
+          cache: "npm"
 
       - name: 🚀 Setup Expo
         uses: expo/expo-github-action@v8
@@ -46,7 +43,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: 📝 Create .env file
         run: |
