--- a/package.json
+++ b/package.json
@@ -74,5 +74,5 @@
     "typescript": "~5.9.3",
     "vitest": "^4.0.16"
   },
-  "packageManager": "pnpm@10.27.0"
+  "packageManager": "npm@10.2.3"
 }
