--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,13 @@ jobs:
 
       - name: 📝 Create .env file
         run: |
-          echo "EXPO_PUBLIC_EAS_PROJECT_ID=${{ secrets.EXPO_PUBLIC_EAS_PROJECT_ID }}" > .env
+          # Pull dynamic variables from GitHub Repository Variables (vars)
+          # IMPORTANT: Use Settings -> Secrets and variables -> Actions -> Variables
+          # Do NOT use SECRETS for variables starting with EXPO_PUBLIC_ as they get masked with ***
+          echo '${{ toJSON(vars) }}' | jq -r 'to_entries[]? | select(.key | startswith("EXPO_PUBLIC_")) | "\(.key)=\(.value)"' > .env
+
+          echo "Generated .env file keys:"
+          cut -d'=' -f1 .env
 
       - name: 🏗 Run EAS Build
         run: |
