--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@logrocket/react-native": "^1.59.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/drawer": "^7.5.0",
@@ -28,7 +29,7 @@
     "expo": "~54.0.29",
     "expo-auth-session": "~7.0.10",
     "expo-background-fetch": "~14.0.9",
-    "expo-build-properties": "^1.0.10",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.21",
