Corrige autenticação e adiciona LogRocket
Corrige falhas na autenticação e inicialização do Firebase
quando a configuração está incompleta.

Adiciona LogRocket para rastreamento de erros e gravação
de sessão.

Atualiza script para exibir versão do build.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ EXPO_PUBLIC_FIREBASE_APP_ID=
 EXPO_PUBLIC_GOOGLE_CLIENT_ID_IOS=
 EXPO_PUBLIC_GOOGLE_CLIENT_ID_ANDROID=
 EXPO_PUBLIC_GOOGLE_CLIENT_ID_WEB=
+
+# LogRocket (Session Recording & Error Tracking)
+EXPO_PUBLIC_LOGROCKET_APP_ID=
