--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@logrocket/react-native": "^1.59.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-firebase/app": "^23.8.2",
+    "@react-native-firebase/auth": "^23.8.2",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.6.13",
@@ -46,7 +49,6 @@
     "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-web-browser": "~15.0.10",
-    "firebase": "^12.7.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
