--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-firebase/app": "^23.8.2",
     "@react-native-firebase/auth": "^23.8.2",
+    "@react-native-firebase/firestore": "^23.8.2",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/native": "^7.1.8",
