Adiciona configuração do Firebase e variáveis de ambiente.
Configura o Firebase adicionando o arquivo google-services.json
e variáveis de ambiente para maior flexibilidade na configuração
do aplicativo. Atualiza o .gitignore para ignorar arquivos de
segredos e configuração local.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,9 @@ jobs:
           echo "Generated .env file keys:"
           cut -d'=' -f1 .env
 
+      - name: 🔑 Setup Firebase Google Services
+        run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > google-services.json
+
       - name: 🏗 Run EAS Build
         run: |
           # EAS will automatically use the .env file during the build process
