--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "test": "vitest run",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
     "build:dev": "eas build --profile development --platform android",
     "build:preview": "eas build --profile preview --platform android",
-    "build:prod": "eas build --profile production --platform android",
-    "build:web": "npx expo export --platform web"
+    "build:prod": "eas build --profile production --platform android"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -30,7 +28,6 @@
     "@react-navigation/stack": "^7.6.13",
     "clsx": "^2.1.1",
     "expo": "~54.0.29",
-    "expo-auth-session": "~7.0.10",
     "expo-background-fetch": "~14.0.9",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
@@ -48,10 +45,8 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
-    "expo-web-browser": "~15.0.10",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
@@ -59,7 +54,6 @@
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-web": "~0.21.2",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^2.6.0"
   },
