--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.7.4",
     "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
