--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
+    "expo-updates": "~29.0.16",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
