Atualiza script de exibição da versão.
Atualiza o script responsável por exibir a versão da aplicação
nos workflows de build e update para usar `tsx` em vez de
`jq`. Isso garante que a versão seja lida corretamente do
arquivo de configuração `app.config.ts`.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,6 @@ jobs:
 
       - name: 📋 Display Version
         run: |
-          VERSION=$(jq -r .version package.json)
-          echo "📦 Build disparado para a versão: $VERSION"
-          echo "::notice title=Build disparado::$VERSION"
+          VERSION=$(npx tsx -e "import config from './app.config.ts'; console.log(config.version);")
+          echo "📦 Build Version: $VERSION"
+          echo "::notice title=Build Version::$VERSION"
