--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -45,3 +45,9 @@ jobs:
       - name: 🚀 Publish Update
         run: |
           eas update --channel ${{ github.event.inputs.channel }} --message "${{ github.event.inputs.message }}" --non-interactive
+
+      - name: 📋 Display Version
+        run: |
+          VERSION=$(npx tsx -e "import config from './app.config.ts'; console.log(config.version);")
+          echo "📦 Build Version: $VERSION"
+          echo "::notice title=Build Version::$VERSION"
