Habilita a construção local de APKs Android, adicionando um novo script, perfil EAS, e atualizando o .gitignore e o README.

--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,12 @@
         "buildType": "apk"
       }
     },
+    "local-apk": {
+      "extends": "preview",
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "preview": {
       "environment": "preview",
       "distribution": "internal",
