--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.70",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.6",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
