--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^22.19.3",
     "@types/qrcode": "^1.5.6",
     "@types/react": "~19.1.17",
+    "babel-preset-expo": "^54.0.10",
     "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
