--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "check": "tsc --noEmit",
     "lint": "expo lint",
     "format": "prettier --write .",
-    "test": "vitest run",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "build:dev": "eas build --profile development --platform android",
@@ -32,7 +31,6 @@
     "expo-background-fetch": "~14.0.9",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.12",
-    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -44,13 +42,11 @@
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-updates": "~29.0.16",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-drawer-layout": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-linear-gradient": "^2.8.3",
@@ -62,21 +58,16 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@expo/ngrok": "^4.1.3",
     "@types/node": "^22.19.3",
-    "@types/qrcode": "^1.5.6",
     "@types/react": "~19.1.17",
     "babel-preset-expo": "^54.0.10",
-    "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.7.4",
-    "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.9.3",
-    "vitest": "^4.0.16"
+    "typescript": "~5.9.3"
   },
   "packageManager": "npm@10.2.3"
 }
