--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-updates": "~29.0.16",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.70",
