--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
+    "expo-insights": "^0.10.8",
     "expo-linking": "~8.0.10",
     "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.23",
