--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-updates": "~29.0.16",
     "nativewind": "^4.2.1",
