--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,33 @@ jobs:
         run: eas build --platform ${{ github.event.inputs.platform }} --profile ${{ github.event.inputs.profile }} --non-interactive
 
       - name: 📋 Display Version
+        id: display_version
         run: |
           VERSION=$(npx tsx -e "import config from './app.config.ts'; console.log(config.version);")
           echo "📦 Build Version: $VERSION"
           echo "::notice title=Build Version::$VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: 🏷️ Create Tag
+        run: |
+          VERSION=${{ steps.display_version.outputs.VERSION }}
+          TAG_NAME="build-v${VERSION}"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git tag $TAG_NAME
+          git push origin $TAG_NAME
+
+      - name: 📦 Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: build-v${{ steps.display_version.outputs.VERSION }}
+          name: Build v${{ steps.display_version.outputs.VERSION }}
+          body: |
+            **Plataforma:** ${{ github.event.inputs.platform }}
+            **Profile:** ${{ github.event.inputs.profile }}
+            **Versão:** ${{ steps.display_version.outputs.VERSION }}
+            **Data:** ${{ github.run_at }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
