--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: 🏗 Checkout
         uses: actions/checkout@v4
