--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/datetimepicker": "8.6.0",
     "@react-native-firebase/app": "^23.8.2",
     "@react-native-firebase/auth": "^23.8.2",
     "@react-native-firebase/firestore": "^23.8.2",
@@ -27,43 +27,39 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.6.13",
     "clsx": "^2.1.1",
-    "expo": "~54.0.33",
-    "expo-background-fetch": "~14.0.9",
-    "expo-build-properties": "~1.0.10",
-    "expo-constants": "~18.0.12",
-    "expo-file-system": "~19.0.21",
-    "expo-font": "~14.0.10",
-    "expo-haptics": "~15.0.8",
-    "expo-insights": "^0.10.8",
-    "expo-linking": "~8.0.10",
-    "expo-notifications": "~0.32.15",
-    "expo-router": "~6.0.23",
-    "expo-secure-store": "~15.0.8",
-    "expo-sharing": "^14.0.8",
-    "expo-splash-screen": "~31.0.12",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "expo-task-manager": "~14.0.9",
-    "expo-updates": "~29.0.16",
+    "expo": "^55.0.2",
+    "expo-build-properties": "~55.0.9",
+    "expo-constants": "~55.0.7",
+    "expo-file-system": "~55.0.9",
+    "expo-font": "~55.0.4",
+    "expo-haptics": "~55.0.8",
+    "expo-linking": "~55.0.7",
+    "expo-notifications": "~55.0.10",
+    "expo-router": "~55.0.2",
+    "expo-sharing": "~55.0.10",
+    "expo-splash-screen": "~55.0.9",
+    "expo-status-bar": "~55.0.4",
+    "expo-updates": "~55.0.11",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
+    "react-native-css-interop": "^0.2.2",
+    "react-native-gesture-handler": "~2.30.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~4.1.6",
+    "react-native-reanimated": "4.2.1",
     "react-native-safe-area-context": "~5.6.2",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-worklets": "0.5.1",
+    "react-native-screens": "~4.23.0",
+    "react-native-svg": "15.15.3",
+    "react-native-worklets": "0.7.2",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.19.3",
     "@types/react": "~19.1.17",
     "babel-preset-expo": "^54.0.10",
+    "depcheck": "^1.4.7",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
