feat: adiciona testes unitários com Jest e CI/CD
- Configura Jest com Testing Library para testes unitários
- Adiciona 64 testes para helpers.ts e storage/base.ts
- Configura coverage com thresholds (77% atual)
- Adiciona step de testes nos workflows build.yml e update.yml
- Adiciona upload de artefatos de coverage no GitHub Actions
- Atualiza README com badges de tests e coverage
- Adiciona coverage/ ao .gitignore

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,6 +40,17 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
+      - name: 🧪 Run Tests
+        run: npm test
+
+      - name: 📊 Test Coverage
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-coverage-update
+          path: coverage/
+          retention-days: 7
+
       - name: 🚀 Publish Update
         run: |
           eas update --channel ${{ github.event.inputs.channel }} --message "${{ github.event.inputs.message }}" --non-interactive
