--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,23 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
+      - name: 🧪 Run Tests
+        run: npm test
+
+      - name: 📊 Test Coverage
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-coverage
+          path: coverage/
+          retention-days: 30
+
+      - name: 🔍 TypeScript Check
+        run: npm run check
+
+      - name: 🧹 Lint
+        run: npm run lint
+
       - name: 🏗 Run EAS Build
         run: eas build --platform ${{ github.event.inputs.platform }} --profile ${{ github.event.inputs.profile }} --non-interactive
 
