--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "npx expo start",
     "check": "tsc --noEmit",
     "lint": "npx expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write .",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
@@ -56,6 +59,9 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.19.3",
     "@types/react": "~19.1.17",
     "babel-preset-expo": "^54.0.10",
@@ -64,8 +70,12 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jest": "^28.1.3",
+    "jest-expo": "^55.0.9",
     "prettier": "^3.7.4",
+    "react-test-renderer": "^19.2.4",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.3"
   },
   "packageManager": "npm@10.2.3"
