--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,18 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-    "types": ["node", "nativewind/types"],
+    "types": ["node", "nativewind/types", "jest"],
     "paths": {
       "@/*": ["./src/*"],
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "nativewind-env.d.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
