--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/datetimepicker": "8.6.0",
     "@react-native-firebase/app": "^23.8.2",
     "@react-native-firebase/auth": "^23.8.2",
+    "@react-native-firebase/crashlytics": "^23.8.6",
     "@react-native-firebase/firestore": "^23.8.2",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/drawer": "^7.5.0",
@@ -61,7 +62,7 @@
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.19.3",
     "@types/react": "~19.1.17",
     "babel-preset-expo": "^54.0.10",
@@ -70,10 +71,11 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "jest": "^28.1.3",
+    "jest": "^29.7.0",
     "jest-expo": "^55.0.9",
     "prettier": "^3.7.4",
-    "react-test-renderer": "^19.2.4",
+    "react-refresh": "^0.18.0",
+    "react-test-renderer": "19.1.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3"
