--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.6.13",
     "clsx": "^2.1.1",
-    "expo": "^55.0.2",
+    "expo": "~55.0.4",
     "expo-build-properties": "~55.0.9",
     "expo-constants": "~55.0.7",
     "expo-file-system": "~55.0.9",
@@ -45,9 +45,9 @@
     "expo-status-bar": "~55.0.4",
     "expo-updates": "~55.0.11",
     "nativewind": "^4.2.1",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-native": "0.82.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
     "react-native-css-interop": "^0.2.2",
     "react-native-gesture-handler": "~2.30.0",
     "react-native-gifted-charts": "^1.4.70",
@@ -64,11 +64,11 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.19.3",
-    "@types/react": "~19.1.17",
-    "babel-preset-expo": "^54.0.10",
+    "@types/react": "~19.2.10",
+    "babel-preset-expo": "~55.0.8",
     "depcheck": "^1.4.7",
     "eslint": "^9.39.2",
-    "eslint-config-expo": "~10.0.0",
+    "eslint-config-expo": "~55.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.7.0",
