--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+
       - name: Instalar Dependências
         if: ${{ github.event.inputs.run_tests == 'true' }}
         run: npm ci
