--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,8 +33,8 @@ jobs:
       - name: 🚀 Setup Expo
         uses: expo/expo-github-action@v8
         with:
-          expo-version: latest
           eas-version: latest
+          packager: npm
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
@@ -53,7 +53,7 @@ jobs:
 
       - name: 🚀 Publish Update
         run: |
-          eas update --channel ${{ github.event.inputs.channel }} --message "${{ github.event.inputs.message }}" --non-interactive
+          eas update --channel ${{ github.event.inputs.channel }} --message "${{ github.event.inputs.message }}" --environment production --non-interactive
 
       - name: 📋 Display Version
         id: display_version
